[metadata]
name = yt_libyt
version = 0.1.0
url = https://github.com/data-exp-lab/yt_libyt
author = Shin-Rong Tsai, Hsi-Yu Schive, Matthew Turk
author_email = "Shin-Rong Tsai" <turquoisea.tsai@gmail.com>, "Matthew Turk" <matthewturk@gmail.com>
description = A yt frontend for libyt
long_description = file: README.rst
keywords = yt_libyt
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires = yt
include_package_data = True
zip_safe = False
packages = find:

[options.packages.find]
exclude =
    tests*
    docs*


################### pytest ####################
[tool:pytest]
testpaths =
    tests
addopts =
    --cov
    --strict-markers

[coverage:run]
branch = True
source = yt_libyt

[coverage:paths]
source =
    yt_libyt/
    */site-packages/yt_libyt/

[coverage:report]
show_missing = True
skip_covered = True
;fail_under = 0      # increase later when we start implementing tests

################### mypy ######################
;[mypy]
;python_version = 3.7
;warn_unused_configs = True
;show_error_context = True
;pretty = True
;namespace_packages = True
;check_untyped_defs = True

################### tox env ###################
# Test -- pytest (Default)
[tox:tox]
isolated_build = True
env_list =
    py37
    py38
    py39
    py310
    py311
    py312

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest

# Type Check -- mypy
;[testenv:typecheck]
;deps =
;    pytest
;    mypy
;commands =
;    mypy --ignore-missing-imports {posargs:yt_libyt tests}


;[bumpversion]
;current_version = 0.1.0
;commit = True
;tag = True
;
;[bumpversion:file:setup.py]
;search = version='{current_version}'
;replace = version='{new_version}'
;
;[bumpversion:file:yt_libyt/__init__.py]
;search = __version__ = '{current_version}'
;replace = __version__ = '{new_version}'
;
;[bdist_wheel]
;universal = 1
;
;[flake8]
;max-line-length = 88
;exclude = docs,
;    */__init__.py,                     # avoid spurious "unused import"
;ignore = E203, # Whitespace before ':' (black compatibility)
;    E266, # Too many leading '#' for block comment
;    E302, # Expected 2 blank lines, found 0
;    E501, # Line too long (let Black deal with line-lenght)
;    E741, # Do not use variables named 'I', 'O', or 'l'
;    W503, # Line break occurred before a binary operator (black compatibility)
